# Kursach_C-

./: .gitignore  Arhitect.txt  CMakeLists.txt  README.md  hello.cpp  hello.txt
.devcontainer/: Dockerfile  devcontainer.json
docs/: RecordManager.txt  StringPool.txt  Task.txt  buffer_pool.txt  pager.txt
include/api/: ConsoleInterface.hpp
include/parser/: Lexer.hpp  Parser.hpp
include/storage/: BufferPool.hpp  Pager.hpp  RecordManager.hpp  StringPool.hpp
src/: CMakeLists.txt  hello.cpp
src/storage/: BufferPool.cpp  Pager.cpp  RecordManager.cpp  StringPool.cpp
tests/: CMakeLists.txt  test.cpp  test_buffer_pool.cpp  test_pager.cpp  test_record_manager.cpp  test_string_pool.cpp
